--- a/package.json
+++ b/package.json
@@ -1,94 +1,277 @@
 {
   "name": "myemail",
   "version": "1.0.0",
-  "description": "email client",
+  "description": "Disposable Email Client",
   "main": "main.js",
   "dependencies": {
+    "ajv": "^6.12.6",
+    "7zip-bin": "^5.1.1",
+    "ajv-keywords": "^3.5.2",
+    "ansi-regex": "^3.0.0",
+    "app-builder-bin": "^3.7.1",
+    "ansi-styles": "^4.3.0",
+    "app-builder-lib": "^22.13.1",
+    "argparse": "^2.0.1",
+    "array-flatten": "^1.1.1",
+    "asar": "^3.1.0",
+    "assert-plus": "^1.0.0",
+    "async": "^0.9.2",
+    "ansi-align": "^3.0.1",
+    "async-exit-hook": "^2.0.1",
+    "balanced-match": "^1.0.2",
+    "at-least-node": "^1.0.0",
+    "base64-js": "^1.5.1",
+    "bluebird": "^3.7.2",
+    "bluebird-lst": "^1.0.9",
+    "body-parser": "^1.19.0",
     "boolean": "^3.1.4",
     "bootstrap": "^5.1.3",
-    "buffer-crc32": "^0.2.13",
+    "boxen": "^5.1.2",
+    "buffer": "^5.7.1",
+    "brace-expansion": "^1.1.11",
+    "buffer-alloc": "^1.2.0",
+    "buffer-alloc-unsafe": "^1.1.0",
+    "accepts": "^1.3.7",
+    "buffer-equal": "^1.0.0",
     "buffer-from": "^1.1.2",
+    "buffer-crc32": "^0.2.13",
+    "builder-util": "^22.13.1",
+    "builder-util-runtime": "^8.8.1",
+    "bytes": "^3.1.0",
     "cacheable-request": "^6.1.0",
+    "camelcase": "^6.2.0",
+    "chalk": "^4.1.2",
+    "chromium-pickle-js": "^0.2.0",
+    "ci-info": "^3.2.0",
+    "cli-boxes": "^2.2.1",
+    "cli-truncate": "^1.1.0",
+    "cliui": "^7.0.4",
+    "color-convert": "^2.0.1",
     "clone-response": "^1.0.2",
+    "color-name": "^1.1.4",
+    "colors": "^1.0.3",
+    "commander": "^5.1.0",
+    "compare-version": "^0.1.2",
+    "concat-map": "^0.0.1",
     "concat-stream": "^1.6.2",
     "config-chain": "^1.1.13",
+    "configstore": "^5.0.1",
+    "buffer-fill": "^1.0.0",
+    "content-type": "^1.0.4",
+    "content-disposition": "^0.5.3",
+    "cookie-signature": "^1.0.6",
+    "cookie": "^0.4.0",
     "core-util-is": "^1.0.3",
+    "crypto-random-string": "^2.0.0",
+    "crc": "^3.8.0",
     "debug": "^4.3.2",
+    "cross-spawn": "^7.0.3",
     "decompress-response": "^3.3.0",
+    "deep-extend": "^0.6.0",
+    "depd": "^1.1.2",
     "defer-to-connect": "^1.1.3",
     "define-properties": "^1.1.3",
+    "destroy": "^1.0.4",
+    "dir-compare": "^2.4.0",
+    "dmg-builder": "^22.13.1",
+    "dot-prop": "^5.3.0",
     "detect-node": "^2.1.0",
+    "dmg-license": "^1.0.9",
+    "dotenv-expand": "^5.1.0",
+    "ee-first": "^1.1.1",
+    "dotenv": "^9.0.2",
+    "ejs": "^3.1.6",
+    "electron-builder": "^22.13.1",
     "duplexer3": "^0.1.4",
-    "electron": "^15.3.1",
     "electron-is-dev": "^2.0.0",
-    "encodeurl": "^1.0.2",
+    "electron-osx-sign": "^0.5.0",
+    "electron-publish": "^22.13.1",
+    "emoji-regex": "^8.0.0",
     "end-of-stream": "^1.4.4",
     "env-paths": "^2.2.1",
     "es6-error": "^4.1.1",
+    "escalade": "^3.1.1",
+    "escape-goat": "^2.1.1",
+    "escape-html": "^1.0.3",
     "escape-string-regexp": "^4.0.0",
+    "etag": "^1.8.1",
+    "electron": "^15.3.2",
     "express": "^4.17.1",
+    "encodeurl": "^1.0.2",
     "extract-zip": "^1.7.0",
+    "fast-deep-equal": "^3.1.3",
     "fd-slicer": "^1.1.0",
+    "fast-json-stable-stringify": "^2.1.0",
+    "filelist": "^1.0.2",
+    "finalhandler": "^1.1.2",
+    "fresh": "^0.5.2",
+    "forwarded": "^0.2.0",
     "fs-extra": "^8.1.0",
-    "get-stream": "^4.1.0",
+    "extsprintf": "^1.4.1",
+    "glob": "^7.2.0",
     "global-agent": "^3.0.0",
+    "get-stream": "^4.1.0",
     "global-tunnel-ng": "^2.7.1",
     "globalthis": "^1.0.2",
+    "global-dirs": "^3.0.0",
     "got": "^9.6.0",
+    "graceful-readlink": "^1.0.1",
     "graceful-fs": "^4.2.8",
+    "has-yarn": "^2.1.0",
+    "has-flag": "^4.0.0",
+    "get-caller-file": "^2.0.5",
+    "hosted-git-info": "^4.0.2",
     "http-cache-semantics": "^4.1.0",
+    "http-errors": "^1.7.2",
+    "fs.realpath": "^1.0.0",
+    "iconv-lite": "^0.6.3",
+    "import-lazy": "^2.1.0",
+    "imurmurhash": "^0.1.4",
+    "iconv-corefoundation": "^1.1.6",
     "inherits": "^2.0.4",
+    "ipaddr.js": "^1.9.1",
+    "inflight": "^1.0.6",
     "ini": "^1.3.8",
+    "is-fullwidth-code-point": "^2.0.0",
+    "is-installed-globally": "^0.4.0",
+    "is-npm": "^5.0.0",
+    "is-path-inside": "^3.0.3",
+    "is-typedarray": "^1.0.0",
+    "is-obj": "^2.0.0",
+    "is-yarn-global": "^0.3.0",
     "isarray": "^1.0.0",
+    "isbinaryfile": "^4.0.8",
+    "isexe": "^2.0.0",
+    "jake": "^10.8.2",
+    "js-yaml": "^4.1.0",
     "json-buffer": "^3.0.0",
-    "json-stringify-safe": "^5.0.1",
+    "json-schema-traverse": "^0.4.1",
+    "json5": "^2.2.0",
+    "is-ci": "^3.0.1",
     "jsonfile": "^4.0.0",
     "keyv": "^3.1.0",
+    "latest-version": "^5.1.0",
     "lodash": "^4.17.21",
+    "lazy-val": "^1.0.5",
     "lowercase-keys": "^1.0.1",
     "lru-cache": "^6.0.0",
+    "make-dir": "^3.1.0",
     "matcher": "^3.0.0",
-    "mimic-response": "^1.0.1",
-    "minimist": "^1.2.5",
+    "merge-descriptors": "^1.0.1",
+    "methods": "^1.1.2",
+    "ieee754": "^1.2.1",
+    "mime": "^2.6.0",
+    "mime-db": "^1.51.0",
+    "media-typer": "^0.3.0",
+    "minimatch": "^3.0.4",
+    "mime-types": "^2.1.34",
     "mkdirp": "^0.5.5",
+    "mimic-response": "^1.0.1",
+    "negotiator": "^0.6.2",
     "ms": "^2.1.2",
+    "nodemailer": "^6.7.1",
+    "node-addon-api": "^1.7.2",
     "normalize-url": "^4.5.1",
-    "npm-conf": "^1.1.3",
     "object-keys": "^1.1.1",
-    "once": "^1.4.0",
+    "npm-conf": "^1.1.3",
+    "on-finished": "^2.3.0",
+    "package-json": "^6.5.0",
     "p-cancelable": "^1.1.0",
+    "parseurl": "^1.3.3",
+    "path-is-absolute": "^1.0.1",
+    "minimist": "^1.2.5",
+    "path-key": "^3.1.1",
+    "json-stringify-safe": "^5.0.1",
+    "path-to-regexp": "^0.1.7",
+    "plist": "^3.0.4",
+    "prepend-http": "^2.0.0",
     "pend": "^1.2.0",
     "pify": "^3.0.0",
-    "prepend-http": "^2.0.0",
     "process-nextick-args": "^2.0.1",
-    "progress": "^2.0.3",
     "proto-list": "^1.2.4",
+    "progress": "^2.0.3",
+    "proxy-addr": "^2.0.7",
+    "once": "^1.4.0",
     "pump": "^3.0.0",
+    "qs": "^6.7.0",
+    "punycode": "^2.1.1",
+    "rc": "^1.2.8",
+    "range-parser": "^1.2.1",
+    "read-config-file": "^6.2.0",
+    "raw-body": "^2.4.0",
     "readable-stream": "^2.3.7",
+    "registry-auth-token": "^4.2.1",
+    "registry-url": "^5.1.0",
     "responselike": "^1.0.2",
+    "rimraf": "^3.0.2",
+    "require-directory": "^2.1.1",
+    "pupa": "^2.1.1",
     "roarr": "^2.15.4",
-    "safe-buffer": "^5.1.2",
-    "semver": "^6.3.0",
+    "safer-buffer": "^2.1.2",
+    "sanitize-filename": "^1.6.3",
     "semver-compare": "^1.0.0",
+    "sax": "^1.2.4",
+    "send": "^0.17.1",
+    "semver": "^6.3.0",
+    "semver-diff": "^3.1.1",
+    "setprototypeof": "^1.1.1",
     "serialize-error": "^7.0.1",
+    "shebang-regex": "^3.0.0",
+    "serve-static": "^1.14.1",
+    "slice-ansi": "^1.0.0",
+    "signal-exit": "^3.0.5",
+    "source-map": "^0.6.1",
+    "source-map-support": "^0.5.20",
+    "stat-mode": "^1.0.0",
+    "statuses": "^1.5.0",
     "sprintf-js": "^1.1.2",
     "string_decoder": "^1.1.1",
+    "string-width": "^2.1.1",
+    "strip-json-comments": "^2.0.1",
+    "strip-ansi": "^4.0.0",
     "sumchecker": "^3.0.1",
+    "supports-color": "^7.2.0",
+    "tmp": "^0.2.1",
+    "temp-file": "^3.4.0",
+    "tmp-promise": "^3.0.3",
     "to-readable-stream": "^1.0.0",
+    "truncate-utf8-bytes": "^1.0.2",
+    "toidentifier": "^1.0.0",
     "tunnel": "^0.0.6",
     "type-fest": "^0.13.1",
+    "type-is": "^1.6.18",
     "typedarray": "^0.0.6",
+    "typedarray-to-buffer": "^3.1.5",
     "universalify": "^0.1.2",
+    "unpipe": "^1.0.0",
+    "safe-buffer": "^5.1.2",
+    "uri-js": "^4.4.1",
     "url-parse-lax": "^3.0.0",
+    "unique-string": "^2.0.0",
+    "utils-merge": "^1.0.1",
     "util-deprecate": "^1.0.2",
+    "smart-buffer": "^4.2.0",
+    "vary": "^1.1.2",
+    "update-notifier": "^5.1.0",
+    "verror": "^1.10.1",
+    "which": "^2.0.2",
+    "widest-line": "^3.1.0",
+    "utf8-byte-length": "^1.0.4",
     "wrappy": "^1.0.2",
+    "write-file-atomic": "^3.0.3",
+    "xmlbuilder": "^15.1.1",
+    "y18n": "^5.0.8",
     "yallist": "^4.0.0",
+    "wrap-ansi": "^7.0.0",
+    "yargs": "^17.2.1",
+    "xdg-basedir": "^4.0.0",
+    "yargs-parser": "^20.2.9",
+    "shebang-command": "^2.0.0",
+    "yarn": "^1.22.17",
     "yauzl": "^2.10.0"
   },
-  "devDependencies": {
-    "electron": "^15.1.2",
-    "electron-builder": "^22.13.1"
-  },
+  "devDependencies": {  "electron": "^15.3.2",
+    "electron-builder": "^22.13.1"},
   "scripts": {
     "postinstall": "install-app-deps",
     "start": "electron .",
@@ -99,7 +282,7 @@
     "type": "git",
     "url": "git+https://github.com/eddiem22/myEmail.git"
   },
-  "author": "Eduard Marcencov",
+  "author": "Eddie Marcencov",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/eddiem22/myEmail/issues"
